# zaia

./: .gitignore  .gitmodules  LICENSE  dune  dune-project  spirv_generated.ml  zaia.opam  zaia.opam.template
.github/workflows/: spirv_spec_gen.yml
gpu_compiler/examples/: dune  import.ml  scratch.ml  scratch.mli
gpu_compiler/spirv_raw/src/: dune  spirv_raw.ml
gpu_compiler/src/: code.ml  code.mli  compiler.ml  compiler.mli  dune  gpu_compiler.ml  header.ml  header.mli  import.ml  instruction.ml  instruction.mli  opcode.ml  requirements.ml  requirements.mli
